# djangocms-rest

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  README.md  docs-live.sh  docs-simple.sh  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: codeql.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
djangocms_rest/: apps.py  cms_config.py  cms_toolbars.py  middleware.py  permissions.py  plugin_rendering.py  schemas.py  urls.py  utils.py  views.py  views_base.py
djangocms_rest/serializers/: alias.py  languages.py  menus.py  pages.py  placeholders.py  plugins.py
djangocms_rest/serializers/utils/: cache.py  render.py
djangocms_rest/static/djangocms_rest/: highlight.css  toggles.js
docs/: .gitignore  Makefile  README.md  changelog.rst  conf.py  contributing.rst  index.rst  live.sh  pyproject.toml  requirements.txt
docs/explanations/: 01-examples.rst  index.rst
docs/how-to/: 01-configuration.rst  01-use-multi-site.rst  02-authentication.rst  02-plugin-creation.rst  03-permissions.rst  04-caching.rst  05-sdk-generation.rst  index.rst
docs/reference/: breadcrumbs.rst  index.rst  languages.rst  menu.rst  pages.rst  permissions.rst  placeholders.rst  plugins.rst  submenu.rst
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst
docs/source/_static/: .gitkeep
docs/source/reference/: healthcheck.rst  index.rst  languages.rst  menu.rst  pages.rst  placeholders.rst
docs/source/tutorial/: 02-installation.rst
docs/tutorial/: 01-installation.rst  01-quickstart.rst  02-installation.rst  02-quickstart.rst  03-openapi-documentation.rst  index.rst
tests/: base.py  settings.py  test_edit_endpoint.py  test_openapi_schema.py  test_plugin_renderer.py  test_rendering.py  types.py  urls.py  utils.py
tests/core/: test_utils.py
tests/endpoints/: test_alias.py  test_cache.py  test_healthcheck.py  test_languages.py  test_menu.py  test_page_detail.py  test_page_list.py  test_page_root.py  test_page_tree_list.py  test_placeholders.py  test_plugin_list.py
tests/middleware/: test_site_context_middleware.py
tests/requirements/: base.txt  dj42_cms41.txt  dj42_cms50.txt  dj50_cms50.txt  dj51_cms41.txt  dj51_cms50.txt  dj52_cms41.txt  dj52_cms50.txt  dj52_cmsmain.txt  dj60_cms50.txt
tests/test_app/: cms_plugins.py  models.py  serializers.py
