[tool.poetry]
name = "djangocms-rest"
description = "API endpoints for django CMS"
dynamic = [ "version" ]
authors = ["Fabian Braun <fsbraun@gmx.de>"]
maintainers = ["Django CMS Association and contributors <info@django-cms.org>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/fsbraun/djangocms-rest"
repository = "https://github.com/fsbraun/djangocms-rest"
packages = [{include = "djangocms_rest"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django CMS",
    "Framework :: Django CMS :: 4.0",
    "Framework :: Django CMS :: 4.1",
    "Framework :: Django CMS :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
[tool.setuptools.dynamic]
version = { attr = "djangocms_rest.__version__" }

[tool.poetry.dependencies]
python = ">=3.9,<4"
django-cms = ">=5.0.0a1"
djangorestframework = "*"
djangocms-link = "^5.0.0"
djangocms-text = "^0.8.0"
pytest-cov = "^6.0.0"
pytest-django = "^4.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-django = "^4.5.2"
mypy = "^1.3.0"
django-stubs = "^4.2.3"
djangorestframework-stubs = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/fsbraun/djangocms-rest"
