[tool.poetry]
name = "djangocms-rest-docs"
version = "0.1.0"
description = "Documentation for django CMS REST"
authors = ["Django CMS Association and contributors <info@django-cms.org>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-copybutton = "^0.5.2"
sphinx-tabs = "^3.4.4"
furo = "^2025.7.19"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2021.3.14"
sphinx-issues = "^3.0.1"
sphinx-removed-in = "^0.2.1"
sphinx-notfound-page = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/fsbraun/djangocms-rest"
Documentation = "https://djangocms-rest.readthedocs.io/" 